update disqus short name, change me.md draft

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "dream"
 
 defaultContentLanguage = "en"
 
-disqusShortname = "ftchen"
+disqusShortname = "ftchen93-github-io"
 
 [params]
    # dark mode
