--- a/config.toml
+++ b/config.toml
@@ -24,8 +24,8 @@ disqusShortname = "ftchen93-github-io"
 
     email = "funtat.chen@gmail.com"
   # twitter = ""
-    facebook = "https://www.facebook.com/FunTatChen/"
-    instagram = "https://www.instagram.com/ftchen/"
+    facebook = "FunTatChen"
+    instagram = "ftchen"
   # mastodon = ""
   # linkedin = ""
   # github = ""
